--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,4 +46,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: your-docker-hub-username/your-app-name:latest
+        tags: alesierraalta/tp-devops:latest
+
+        
